# tg_bot

./: .gitignore  Dockerfile  README.txt  api.py  beauty_print.py  compose.yaml  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  states.py  utils.py
routers/: auth.py  checklist.py  tasks.py  title.py  waybill.py
src/: api.py  config.py  utils.py
src/dto/: schemas.py  states.py
telegram/: beauty_print.py  keyboards.py  main.py
telegram/routers/: auth.py  checklist.py  tasks.py  title.py  waybill.py
tests/: test_message_handlers.py  test_utils.py
